<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_graph_home"
        android:title="@string/home_screen_title"
        android:icon="@drawable/selector_home"/>

    <item
        android:id="@+id/nav_graph_discover"
        android:title="@string/discover_screen_title"
        android:icon="@drawable/selector_discover"/>

    <item
        android:id="@+id/nav_graph_bookmark"
        android:title="@string/bookmark_screen_title"
        android:icon="@drawable/selector_bookmark"/>

    <item
        android:id="@+id/nav_graph_progress"
        android:title="@string/progress_screen_title"
        android:icon="@drawable/selector_progess"/>

    <item
        android:id="@+id/nav_graph_setting"
        android:title="@string/setting_screen_title"
        android:icon="@drawable/selector_setting"/>
</menu>