<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ltmb.fitness.scene.getstarted.GetStartedViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorBackground"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_run"
                app:tint="?colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/get_started_title"
                android:textColor="?colorText"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/get_started_sub_title"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom
"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:onClick="@{()-> viewModel.onClickSignup()}"
                android:stateListAnimator="@null"
                android:text="@string/get_started_signup"
                app:cornerRadius="60dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="?colorInputBackground"
                android:onClick="@{()-> viewModel.onClickLogin()}"
                android:stateListAnimator="@null"
                android:text="@string/get_started_login"
                android:textColor="?colorPrimary"
                app:cornerRadius="60dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/get_started_policy" />

        </LinearLayout>

    </LinearLayout>
</layout>