<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ltmb.fitness.scene.signup.SignupViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorBackground"
        android:orientation="vertical">

        <com.ltmb.fitness.widget.actionbarview.ActionBarView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:abv_title=""
            app:abv_viewModel="@{viewModel}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_title"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/icon_person" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:lineSpacingExtra="6dp"
                android:text="@string/signup_sub_title"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup_email"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.ltmb.fitness.widget.inputview.InputView
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/signup_email"
                android:textColorHint="?colorInputTextHintColor"
                app:iv_background="?colorInputBackground"
                app:iv_left_icon="@drawable/ic_mail"
                app:iv_left_icon_tint="?colorText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup_password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.ltmb.fitness.widget.inputview.InputView
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/signup_password"
                android:inputType="textPassword"
                android:textColorHint="?colorInputTextHintColor"
                app:iv_background="?colorInputBackground"
                app:iv_left_icon="@drawable/ic_lock"
                app:iv_left_icon_tint="?colorText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup_retype_password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.ltmb.fitness.widget.inputview.InputView
                android:id="@+id/input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/signup_retype_password"
                android:inputType="textPassword"
                android:textColorHint="?colorInputTextHintColor"
                app:iv_background="?colorInputBackground"
                app:iv_left_icon="@drawable/ic_lock"
                app:iv_left_icon_tint="?colorText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_have_account" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:onClick="@{()-> viewModel.onClickLogin()}"
                    android:text="@string/signup_login"
                    android:textColor="?colorPrimary" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:onClick="@{() -> viewModel.onClickSignup()}"
                android:text="@string/signup"
                app:cornerRadius="60dp" />
        </LinearLayout>
    </LinearLayout>
</layout>