<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ltmb.fitness.scene.selectweight.SelectWeightViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorBackground"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <com.ltmb.fitness.widget.actionbarview.ActionBarView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:abv_title="" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:max="100"
                android:progress="50"
                android:progressTint="?colorPrimary" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:gravity="end|center"
                android:text="@string/select_weight_status"
                android:textColor="?colorText"
                android:textSize="16sp" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_weight_title"
            android:textColor="?colorText"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/select_weight_sub_title"
            android:textColor="?colorSubText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:baselineAligned="false"
            android:gravity="center"
            tools:ignore="UselessLeaf">

            <NumberPicker
                android:id="@+id/numberPickerAge"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?colorText"
                android:text="Kg"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="bottom"
            android:orientation="horizontal"
            android:padding="20dp">

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.45"
                android:backgroundTint="?colorInputBackground"
                android:text="@string/start_app_skip"
                android:stateListAnimator="@null"
                android:textColor="?colorPrimary"
                app:cornerRadius="60dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:stateListAnimator="@null"
                android:layout_weight="0.45"
                android:text="@string/start_app_continue"
                android:onClick="@{()-> viewModel.onClickContinue()}"
                android:textSize="12sp"
                app:cornerRadius="60dp" />
        </LinearLayout>
    </LinearLayout>


</layout>