<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ltmb.fitness.scene.selectgender.SelectGenderViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:lineSpacingExtra="10sp"
                android:paddingHorizontal="16dp"
                android:text="@string/select_get_started_title"
                android:textColor="?colorText"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:text="@string/select_get_started_sub_title"
                android:textColor="?colorSubText"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp">

            <androidx.cardview.widget.CardView
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/thumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/img_exercise_sample"
                        android:importantForAccessibility="no" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?colorWorkoutSurface"
                        android:orientation="vertical"
                        android:padding="30dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginBottom="10dp"
                            android:text="@string/select_get_started_img_name"
                            android:textColor="?colorWorkoutPlanTitle"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_get_started_img_title"
                            android:textColor="?colorWorkoutPlanSubTitle"
                            android:textSize="12sp"
                         />
                    </LinearLayout>
                </FrameLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:padding="20dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.45"
                android:stateListAnimator="@null"
                android:backgroundTint="?colorInputBackground"
                android:text="@string/select_get_started_goto"
                android:textAllCaps="false"
                android:textColor="?colorPrimary"
                app:cornerRadius="60dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.45"
                android:text="@string/select_get_started"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:stateListAnimator="@null"
                app:cornerRadius="60dp" />
        </LinearLayout>
    </LinearLayout>


</layout>